# glowcontrol

./: .gitignore  AUTHORS  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  meson.build
debian/: control
gnome/: GlowControl.desktop
installation/ubuntu/: README.md
pixmaps/: audio.xpm  channel.xpm  dimm.xpm  plug.xpm  scene.xpm  sleep.xpm  sound.xpm  sync.xpm
src/: Makefile.am  Makefile.in  audio.c  audio.h  gfx.c  gfx.h  intl.h  main.c  main.h  main_window.c  main_window.h  out.c  out.h  project.c  project.h  remote.c  remote.h  scene.c  scene.h  scene_editor.c  scene_editor.h  step.c  step.h  step_editor.c  step_editor.h  types.h  xml_parser.c  xml_parser.h  xml_writer.c  xml_writer.h
